# smsd-pro

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: bench_suite.py
docs/: README.md  WHITEPAPER.md  bench_README.md
scripts/: bench.py  cli.py  smsd.py
smsd_pro/: __init__.py  chem.py  cli.py  engines.py  mcs.py  smarts_vm.py  vf.py  viz.py
test_output/: bench.py  bench_cases.csv  bench_cases.json  cases_index.md
tests/: conftest.py  test_bulk_param.py  test_core.py  test_mcs.py  test_substructure.py  test_viz_bench.py
