[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smsd-pro"
version = "0.5.0"
description = "SMSD Pro: fast substructure & MCS engines with rich chemistry (BioInception PVT LTD)"
readme = "docs/README.md"
requires-python = ">=3.9,<3.14"
license = { file = "LICENSE" }
authors = [{ name = "BioInception PVT LTD", email = "support@bioinception.example" }]
keywords = ["cheminformatics", "substructure", "MCS", "clique", "medchem", "RDKit", "SMARTS"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Topic :: Scientific/Engineering :: Chemistry"
]
dependencies = [
  "numpy>=1.23",
  "pillow>=9.5",
  "matplotlib>=3.7",
  "rdkit>=2025.03.6"
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-benchmark>=4.0.0", "pandas>=2.2"]

[project.urls]
Homepage = "https://github.com/bioinception-labs/smsd-pro"

[project.scripts]
smsd-pro = "smsd_pro.cli:main"

[tool.setuptools.packages.find]
where = ["." ]
include = ["smsd_pro*"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
markers = [
  "slow: long-running benchmark tests"
]
