[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smsd-pro"
version = "0.1.1"
description = "SMSD Pro: fast substructure & MCS engines with rich chemistry (BioInception PVT LTD)"
readme = "docs/README.md"
requires-python = ">=3.9,<3.14"
# Use SPDX license string to silence the deprecation warning:
license = "MIT"
authors = [{ name = "BioInception PVT LTD", email = "asad.rahman@bioinceptionlabs.com" }]
keywords = ["cheminformatics", "substructure", "MCS", "clique", "medchem", "SMSD", "RDKit"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Chemistry"
]
dependencies = [
  "numpy>=1.23",
  "pillow>=9.5",
  "matplotlib>=3.7",
]

[project.urls]
Homepage = "https://github.com/asad/smsd-pro"

[project.optional-dependencies]
rdkit = ["rdkit-pypi>=2025.03.1"]

[tool.setuptools]
packages = ["smsd_pro"]          # <— add this

