[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smsd-pro"
version = "1.0.0"
description = "SMSD Pro: fast substructure & MCS engines with rich chemistry (BioInception PVT LTD)"
readme = "README.md"
requires-python = ">=3.9,<3.14"
license = "Apache-2.0"
authors = [
  { name = "Syed Asad Rahman", email = "asad.rahman@bioinceptionlabs.com" },
  { name = "BioInception PVT LTD", email = "support@bioinceptionlabs.com" }
]
keywords = ["cheminformatics", "substructure", "MCS", "clique", "medchem", "SMSD", "RDKit"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Chemistry"
]
dependencies = [
  "numpy>=1.23",
  "pillow>=9.5",
  "matplotlib>=3.7",
]

[project.urls]
Homepage = "https://github.com/asad/smsd-pro"

[project.optional-dependencies]
rdkit = ["rdkit-pypi>=2025.03.1"]

[project.scripts]
smsd-pro = "smsd_pro.cli:main"

[tool.setuptools]
packages = ["smsd_pro"]
